src/components/Body.css
/* Body Section */
.body {
  position: relative;
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100vh;
  min-height: 56rem;
  padding-top: 25rem;
  overflow: hidden;
}

.body-container {
  transform: scale(1.32);
  overflow: hidden;
}

@media (max-width: 600px) {
  .body-profile {
    transform: scale(0.5);
  }

  .body-container {
    top: -15%;
  }

  .console-text {
    font-size: 0.2rem;
  }
}

.body .body-container {
  position: relative;
  display: flex;
  max-width: 120rem;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.body-profile {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  max-width: 20rem;
}

.body-img {
  width: 100%;
  transform: scale(3);
  border-radius: 100%;
}

.body-content {
  padding-top: 20rem;
  text-align: center;
}

.body-headline {
  font-size: 5rem;
  padding-bottom: 1rem;
  color: white;
}

.body-text {
  font-size: 2rem;
  padding-bottom: 1rem;
  color: lightgray;
}

.body-icons {
  display: flex;
  width: 100%;
  justify-content: center;
  font-size: 8rem;
  padding: 2rem 0 2rem 0;
}

.body .icon-link {
  padding: 0.8rem 0.8rem;
  color: white;
}

.icon-link:hover {
  color: lightgray;
  transform: scale(1.05);
}

@media (min-width: 601) and (max-width: 768px) {
  .body .body-container {
    max-width: 90%;
  }

  .body-profile {
    max-width: 15rem;
  }

  .body-headline {
    font-size: 2.5rem;
  }

  .body-text {
    font-size: 1.2rem;
  }

}

@media (max-width: 600px) {
  .body-img {
    height: auto;
  }
}


.console-container {
  position: absolute;
  top: 0%;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0);
  /* Adjust the opacity and color as desired */
  z-index: 0;
  overflow: hidden;
}

.console-text {
  font-family: monospace;
  font-weight: bold;
  font-size: 2rem;
  margin: 0;
  padding: 0;
  line-height: 1;
  color: limegreen;
  text-shadow: 0px 0px 10px limegreen;
  animation: scrollText 30s linear infinite;
}

@media (max-width: 600px) {
  .console-text {
    font-size: 1rem;
  }
}

@keyframes scrollText {
  0% {
    transform: translateY(0);
  }

  100% {
    transform: translateY(-100%);
  }
}

.msg {
  font-family: monospace;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 3rem;
  padding-top: 0.3rem;
  background: red;
  box-shadow: 0 0 30px red;
  text-shadow: 0 0 20px white;
  color: white;
  height: 4rem;
  text-align: center;
  min-width: 200px;
  animation-name: blink;
  animation-duration: 1.2s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
  align-items: center;
}

@keyframes blink {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/* End Body Section */

